[gd_scene load_steps=24 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/dzialo.tex" type="Texture" id=2]
[ext_resource path="res://assets/gunanim_01.png" type="Texture" id=3]
[ext_resource path="res://assets/gunanim_02.png" type="Texture" id=4]
[ext_resource path="res://assets/gunanim_03.png" type="Texture" id=5]
[ext_resource path="res://assets/gunanim_04.png" type="Texture" id=6]
[ext_resource path="res://assets/gunanim_05.png" type="Texture" id=7]
[ext_resource path="res://assets/gunanim_06.png" type="Texture" id=8]
[ext_resource path="res://assets/gunanim_07.png" type="Texture" id=9]
[ext_resource path="res://assets/gunanim_08.png" type="Texture" id=10]
[ext_resource path="res://assets/gunanim_09.png" type="Texture" id=11]
[ext_resource path="res://assets/gunanim_10.png" type="Texture" id=12]
[ext_resource path="res://assets/gunanim_11.png" type="Texture" id=13]
[ext_resource path="res://assets/gunanim_12.png" type="Texture" id=14]
[ext_resource path="res://assets/gunanim_13.png" type="Texture" id=15]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -1.78432, 4.02114, -1.78432, -4.8145, 2.00238, -4.8145, 2.00238, 4.02114 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 2.00238, 4.02114, 13.8358, 4.02114, 13.8358, 7.80784, -18.6667, 16.6435 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 13.8358, 7.80784, 19.0425, 7.80784, 19.0425, 16.6435, -18.6667, 16.6435 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -1.78432, 4.02114, 2.00238, 4.02114, -18.6667, 16.6435, -13.7755, 7.80784 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -18.6667, 16.6435, -18.6667, 7.80784, -13.7755, 7.80784 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( -1.78432, 4.02114, -13.7755, 7.80784, -13.7755, 4.02114 )

[sub_resource type="SpriteFrames" id=7]

animations = [ { "frames":[ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="Animation" id=8]

resource/name = "gun_anim"
length = 1.0
loop = false
step = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 12, 1 ] }

[node name="ship" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 5 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 6 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
gravity_point = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, -0.15778 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="sprite"]

frames = SubResource( 7 )
animation = "default"
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="sprite/AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/gun_anim = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -1.78432, -4.8145, 2.00238, -4.8145, 2.00238, 4.02114, 13.8358, 4.02114, 13.8358, 7.80784, 19.0425, 7.80784, 19.0425, 16.6435, -18.6667, 16.6435, -18.6667, 7.80784, -13.7755, 7.80784, -13.7755, 4.02114, -1.78432, 4.02114 )
shape_range = Vector2( 0, 5 )
trigger = false

[node name="shootFrom" type="Position2D" parent="."]

transform/pos = Vector2( 0, -15 )
z/relative = false

[connection signal="area_enter" from="." to="." method="_on_ship_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_ship_body_enter"]


